# flowscope

./: .gitignore  CLAUDE.md  README.md  Taskfile.yml  action.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
docs/superpowers/plans/: 2026-05-26-exception-workflow.md  2026-05-26-static-analysis-gate.md
docs/superpowers/specs/: 2026-05-26-exception-workflow-design.md
src/flowscope/: analyzer.py  cli.py  exception.py  models.py  parser.py  policy.py
src/hubflow/: parser.py  policy.py
tests/: conftest.py  test_analyzer.py  test_exception_scaffold.py  test_parser.py  test_policy.py
tests/fixtures/: agentic_scoped.yml  agentic_step.yml  clean_minimal.yml  empty_permissions.yml  high_risk_scope_justified.yml  high_risk_scope_no_justification.yml  job_level_scoped.yml  pull_request_target_safe.yml  pull_request_target_write.yml  workflow_level_write.yml  workflow_run_write.yml  write_all.yml
