[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowscope"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ruamel.yaml>=0.18",
]

[project.scripts]
flowscope = "flowscope.cli:main"
flowscope-exception = "flowscope.exception:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.hatch.build.targets.wheel]
packages = ["src/flowscope"]

[tool.pytest.ini_options]
testpaths = ["tests"]
